objects/Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Account_Executive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Executive</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Engineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Engineer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Mappings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vertical__c</fullName>
        <label>Vertical</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Copado Robotic Testing</fullName>
                </value>
                <value>
                    <fullName>Non-AOV</fullName>
                </value>
                <value>
                    <fullName>High Tech</fullName>
                </value>
                <value>
                    <fullName>CORE</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>FINS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Mapping</label>
    <nameField>
        <displayFormat>M-{0000}</displayFormat>
        <label>Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>